feat: add gradle plugin recipe
Note: openrewrite plugin requires running in the context of the gradle build.
We can either create a standalone implementation or use gradle model
tooling API to run the recipe.