@@ -22,7 +22,6 @@ import java.util.List;
 
 import com.canonical.devpackspring.rewrite.StatementUtil;
 import org.jspecify.annotations.NonNull;
-import org.jspecify.annotations.Nullable;
 import org.openrewrite.ExecutionContext;
 import org.openrewrite.InMemoryExecutionContext;
 import org.openrewrite.Parser;
@@ -56,29 +55,31 @@ public class GroovyAddPluginVisitor extends GroovyIsoVisitor<ExecutionContext> {
 			.orElseThrow(() -> new IllegalArgumentException("Could not parse as Gradle"));
 
 		List<Statement> statements = ((G.CompilationUnit) templateSource).getStatements();
-		G.MethodInvocation stm = (G.MethodInvocation) statements.get(0);
-		G.Lambda lambda = (G.Lambda) stm.getArguments().get(0);
+		G.MethodInvocation stm = (G.MethodInvocation) statements.getFirst();
+		G.Lambda lambda = (G.Lambda) stm.getArguments().getFirst();
 		G.Block gBlock = (G.Block) lambda.getBody();
-		visitor = new AddPluginVisitor(pluginName, gBlock.getStatements());
+		visitor = new AddPluginVisitor(pluginName, (J.MethodInvocation)((J.Return) gBlock.getStatements().getFirst()).getExpression());
 	}
 
 	@Override
-	public @Nullable J postVisit(@NonNull J tree, ExecutionContext executionContext) {
-		return visitor.postVisit(tree, executionContext, (t, context) -> {
-			if (Boolean.TRUE.equals(context.getMessage(AddPluginVisitor.HAS_PLUGIN_BLOCK))) {
-				return tree;
-			}
-			if (tree instanceof G.CompilationUnit unit) {
-				if (!unit.getSourcePath().toString().equals("build.gradle")) {
-					return tree;
-				}
+	public J.@NonNull MethodInvocation visitMethodInvocation(J.@NonNull MethodInvocation method,
+			ExecutionContext executionContext) {
+		return visitor.vistMethodInvocation(method, executionContext, getCursor(), super::visitMethodInvocation);
+	}
 
-				List<Statement> statements = StatementUtil.append(unit.getStatements(),
-						((G.CompilationUnit) templateSource).getStatements());
-				return unit.withStatements(statements);
-			}
+	@Override
+	public G.@NonNull CompilationUnit visitCompilationUnit(G.@NonNull CompilationUnit cu,
+			ExecutionContext executionContext) {
+		var tree = super.visitCompilationUnit(cu, executionContext);
+		if (Boolean.TRUE.equals(getCursor().getRoot().getMessage(AddPluginVisitor.HAS_PLUGIN_BLOCK))) {
 			return tree;
-		});
+		}
+		if (!tree.getSourcePath().toString().endsWith("build.gradle")) {
+			return tree;
+		}
+		List<Statement> statements = StatementUtil.append(((G.CompilationUnit) templateSource).getStatements(),
+				tree.getStatements());
+		return tree.withStatements(statements);
 	}
 
 }
